--- a/marketing/index.html
+++ b/marketing/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul>
-                <li><img src="./logo.png" alt="Family shop logo" class="logo"></li>
+                <li><img src="./logo.png" alt="Family shop " class="logo"></li>
                 <li><a href="index.html"class="nav-link">Accueil</a></li>
                 <li><a href="article.html"class="nav-link">Articles</a></li>
                 <li><a href="portofolio.html"class="nav-link">Portfolio</a></li>
